--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,39 @@
   <meta charset="utf-8">
   <title>Ralph</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, viewport-fit=cover, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.240828cbf5ae84b0c975.css"></head>
+
+  <!-- Android -->
+  <meta name="theme-color" content="#f78216">
+
+  <!-- IOS -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="Ralph">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="apple-touch-icon" href="./assets/icons/icon-192x192.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./assets/icons/icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/icon-192x192.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="./assets/icons/icon-152x152.png">
+
+  <!-- iPhone Xs Max (1242px x 2688px) --> 
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" href="img/icons-ios/apple-launch-1125x2436.png"> -->
+  <!-- iPhone Xr (828px x 1792px) --> 
+  <!-- <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" href="img/icons-ios/apple-launch-828x1792.png"> -->
+  <!-- iPhone X, Xs (1125px x 2436px) --> 
+  <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="img/icons-ios/apple-launch-1125x2436.png">
+  <!-- iPhone 8 Plus, 7 Plus, 6s Plus, 6 Plus (1242px x 2208px) --> 
+  <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" href="img/icons-ios/apple-launch-1242x2208.png">
+  <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) --> 
+  <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="img/icons-ios/apple-launch-750x1334.png">
+  <!-- iPhone 5 (640px x 1136px) -->
+  <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="img/icons-ios/apple-launch-640x1136.png">
+
+<link rel="stylesheet" href="styles.27788dd4c9688a91f7fa.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.16b54f5fd58d70b4ac43.js" defer></script><script src="main-es2015.a8cee1d3bfde0f2cfb11.js" type="module"></script><script src="main-es5.a8cee1d3bfde0f2cfb11.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.16b54f5fd58d70b4ac43.js" defer></script><script src="main-es2015.24ca0c992ee536ed509a.js" type="module"></script><script src="main-es5.24ca0c992ee536ed509a.js" nomodule defer></script></body>
 </html>
