--- a/client/index.html
+++ b/client/index.html
@@ -22,9 +22,9 @@
   <link rel="apple-touch-icon" sizes="167x167" href="./assets/icons/icon-152x152.png">
 
   <!-- iPhone Xs Max (1242px x 2688px) --> 
-  <!-- <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" href="img/icons-ios/apple-launch-1125x2436.png"> -->
+  <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" href="img/icons-ios/apple-launch-1125x2436.png">
   <!-- iPhone Xr (828px x 1792px) --> 
-  <!-- <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" href="img/icons-ios/apple-launch-828x1792.png"> -->
+  <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" href="img/icons-ios/apple-launch-828x1792.png">
   <!-- iPhone X, Xs (1125px x 2436px) --> 
   <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="img/icons-ios/apple-launch-1125x2436.png">
   <!-- iPhone 8 Plus, 7 Plus, 6s Plus, 6 Plus (1242px x 2208px) --> 
@@ -34,9 +34,9 @@
   <!-- iPhone 5 (640px x 1136px) -->
   <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="img/icons-ios/apple-launch-640x1136.png">
 
-<link rel="stylesheet" href="styles.27788dd4c9688a91f7fa.css"></head>
+<link rel="stylesheet" href="styles.188ff1d3c15582297f74.css"></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.16b54f5fd58d70b4ac43.js" defer></script><script src="main-es2015.24ca0c992ee536ed509a.js" type="module"></script><script src="main-es5.24ca0c992ee536ed509a.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.16b54f5fd58d70b4ac43.js" defer></script><script src="main-es2015.dc6d521bd24fb947991d.js" type="module"></script><script src="main-es5.dc6d521bd24fb947991d.js" nomodule defer></script></body>
 </html>
