Versión final con mensaje de verificación

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,8 @@
   <meta name="theme-color" content="#f78216">
 
   <!-- IOS -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
   <meta name="apple-mobile-web-app-title" content="Ralph">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -38,5 +39,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.16b54f5fd58d70b4ac43.js" defer></script><script src="main-es2015.adc2dd1e30512151ceab.js" type="module"></script><script src="main-es5.adc2dd1e30512151ceab.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.16b54f5fd58d70b4ac43.js" defer></script><script src="main-es2015.d9dd201cc296b1d8e57b.js" type="module"></script><script src="main-es5.d9dd201cc296b1d8e57b.js" nomodule defer></script></body>
 </html>
