--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,8 @@
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '3599877723361663');
   fbq('track', 'PageView');
+
+  fbq.disablePushState = true; //not recommended, but can be done
 </script>
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=3599877723361663&ev=PageView&noscript=1"
