--- a/client/index.html
+++ b/client/index.html
@@ -51,12 +51,12 @@
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '3599877723361663');
-    // fbq('track', 'PageView');
+    fbq('track', 'PageView');
     
   </script>
-  <!-- <noscript><img height="1" width="1" style="display:none"
+  <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=3599877723361663&ev=PageView&noscript=1"
-  /></noscript> -->
+  /></noscript>
   <!-- End Facebook Pixel Code -->
 <script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.3dbb4db1f50cbe9dce14.js" defer></script><script src="main-es2015.9579cc9cf0e49f306f53.js" type="module"></script><script src="main-es5.9579cc9cf0e49f306f53.js" nomodule defer></script></body>
 </html>
