--- a/client/index.html
+++ b/client/index.html
@@ -35,12 +35,12 @@
   <!-- iPhone 5 (640px x 1136px) -->
   <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" href="./assets/icons-ios/apple-launch-640x1136.png">
 
-<link rel="stylesheet" href="styles.0349a50f68fb2dd437df.css"></head>
+<link rel="stylesheet" href="styles.c6001f06fbd532d3438c.css"></head>
 <body>
   <app-root></app-root>
 
    <!-- Facebook Pixel Code -->
-  <script>
+  <!-- <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -55,10 +55,10 @@
   </script>
   <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=3599877723361663&ev=PageView&noscript=1"
-  /></noscript>
+  /></noscript> -->
   <!-- End Facebook Pixel Code -->
 
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.3dbb4db1f50cbe9dce14.js" defer></script><script src="main-es2015.32997fcb48c47d4c1a55.js" type="module"></script><script src="main-es5.32997fcb48c47d4c1a55.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="scripts.3dbb4db1f50cbe9dce14.js" defer></script><script src="main-es2015.6c90f75865cde2c13ed0.js" type="module"></script><script src="main-es5.6c90f75865cde2c13ed0.js" nomodule defer></script></body>
 </html>
